--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,6 +16,12 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/react": "*",
+    "@ignite-ui/tokens": "*",
+    "@storybook/addons": "^7.0.26",
+    "@storybook/react": "^7.0.26",
+    "@storybook/theming": "^7.0.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
